fix: main menu layout issues

--- a/src/styles/main-menu-view.css
+++ b/src/styles/main-menu-view.css
@@ -3,6 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
     overflow: hidden;
     opacity: 0.7;
     transition: opacity 750ms ease-out;
@@ -76,6 +77,7 @@
     right: 0;
     background: rgba(11, 11, 11, 0.9);
     padding: 2rem;
+    padding-bottom: 6rem;
     overflow-y: auto;
     font-size: 1.25rem;
     opacity: 1;
